// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button brand 1`] = `
.c0 {
  background: linear-gradient(         90deg,         #dd2a62 0%,         #6c2c83 91%       );
  color: white;
  padding: 5px 15px;
  border-radius: 5px;
  outline: 0;
  border: 0;
  cursor: pointer;
  box-shadow: 0px 2px 2px lightgray;
  transition: ease background-color 250ms;
}

.c0:hover {
  background: linear-gradient(             90deg,             #6c2c83 0%,             #dd2a62 91%           );
}

.c0:disabled {
  cursor: default;
  opacity: 0.7;
}

<button
  class="c0"
  variant="brand"
>
  text
</button>
`;

exports[`button neutral 1`] = `
.c0 {
  background: #111111;
  color: white;
  padding: 5px 15px;
  border-radius: 5px;
  outline: 0;
  border: 0;
  cursor: pointer;
  box-shadow: 0px 2px 2px lightgray;
  transition: ease background-color 250ms;
}

.c0:hover {
  background: #dddfe4;
  color: #111111;
}

.c0:disabled {
  cursor: default;
  opacity: 0.7;
}

<button
  class="c0"
  variant="neutral"
>
  text
</button>
`;
